--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -162,6 +162,7 @@ span.material-icons {
         text-align: left;
         padding: 20px 40px;
         vertical-align: middle;
+        font-weight: 400;
     }
 
     & td {
@@ -2032,4 +2033,12 @@ $slider-height: 550px;
     & .basket__order-form {
         margin-top: 15px;
     }
+}
+
+.basket-empty{
+    display: none;
+}
+
+.ck-editor{
+    margin-top: 10px !important;
 }
