--- a/public/css/app.css
+++ b/public/css/app.css
@@ -924,9 +924,32 @@ label.active {
 }
 
 .news-card .news-card__item {
+  position: relative;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   box-sizing: border-box;
+}
+
+.news-card .news-card__item .news__edit {
+  opacity: 0;
+  visibility: hidden;
+  top: 10px;
+  right: 10px;
+  position: absolute;
+  background-color: #fff;
+  border-radius: 100%;
+  padding: 5px;
+  transition: 0.3s;
+}
+
+.news-card .news-card__item .news__edit:hover {
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+  transition: 0.3s;
+}
+
+.news-card .news-card__item:hover .news__edit {
+  opacity: 1;
+  visibility: visible;
 }
 
 .news-card .news-card__item img {
@@ -2004,5 +2027,13 @@ label.active {
 
 .ck-editor {
   margin-top: 10px !important;
+}
+
+.edit-img {
+  width: 200px;
+  height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-top: 20px;
 }
 
