--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -954,9 +954,34 @@ $slider-height: 550px;
     grid-gap: 75px;
 
     & .news-card__item {
+        position: relative;
         box-shadow: $mainShadow;
         border-radius: 10px;
         box-sizing: border-box;
+
+        & .news__edit{
+            opacity: 0;
+            visibility: hidden;
+            top: 10px;
+            right: 10px;
+            position: absolute;
+            background-color: #fff;
+            border-radius: 100%;
+            padding: 5px;
+            transition: .3s;
+
+            &:hover{
+                box-shadow: $mainShadow;
+                transition: .3s;
+            }
+        }
+
+        &:hover{
+            & .news__edit{
+                opacity: 1;
+                visibility: visible;
+            }
+        }
 
         & img {
             width: 100%;
@@ -2041,4 +2066,11 @@ $slider-height: 550px;
 
 .ck-editor{
     margin-top: 10px !important;
+}
+
+.edit-img{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    margin-top: 20px;
 }
