--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -947,6 +947,40 @@ $slider-height: 550px;
 }
 
 // ************
+// Редактирование страницы
+// ************
+
+.edit{
+    position: relative;
+
+    & .edit__btn{
+        opacity: 0;
+        visibility: hidden;
+        top: 10px;
+        right: 10px;
+        position: absolute;
+        background-color: #fff;
+        border-radius: 100%;
+        padding: 7px 8px;
+        transition: .3s;
+        z-index: 100;
+
+        &:hover{
+            box-shadow: $mainShadow;
+            transition: .3s;
+        }
+    }
+
+    &:hover{
+        & .edit__btn{
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+}
+
+
+// ************
 // Карточки новостей
 // ************
 
@@ -958,30 +992,6 @@ $slider-height: 550px;
         box-shadow: $mainShadow;
         border-radius: 10px;
         box-sizing: border-box;
-
-        & .news__edit{
-            opacity: 0;
-            visibility: hidden;
-            top: 10px;
-            right: 10px;
-            position: absolute;
-            background-color: #fff;
-            border-radius: 100%;
-            padding: 5px;
-            transition: .3s;
-
-            &:hover{
-                box-shadow: $mainShadow;
-                transition: .3s;
-            }
-        }
-
-        &:hover{
-            & .news__edit{
-                opacity: 1;
-                visibility: visible;
-            }
-        }
 
         & img {
             width: 100%;
@@ -2069,7 +2079,6 @@ $slider-height: 550px;
 }
 
 .edit-img{
-    width: 200px;
     height: 200px;
     object-fit: cover;
     margin-top: 20px;
