--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -742,6 +742,10 @@ label {
             font-weight: bold;
             font-size: 52px;
         }
+
+        & img{
+            width: 130px;
+        }
     }
 
     & .header__menu {
@@ -1588,6 +1592,7 @@ $slider-height: 550px;
     & .product-card__loader {
         position: absolute;
         background-color: rgba(255, 255, 255, 0.5);
+        z-index: 2;
         @include centerBlock(100%, 100%, 0, 0);
 
         display: none;
@@ -2082,4 +2087,94 @@ $slider-height: 550px;
     height: 200px;
     object-fit: cover;
     margin-top: 20px;
+}
+
+// ************
+// Слайдер
+// ************
+
+.slider-grid{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 20px;
+    margin-bottom: 20px;
+
+    & .slider-grid__img{
+        position: relative;
+
+        & .slider-grid__change-img{
+            @include centerBlock(100%, 100%, 0, 0);
+            @include glassBG(3px);
+            background-color: rgba(0, 0, 0, 0.5);
+            opacity: 0;
+            visibility: hidden;
+            border-radius: 5px;
+            position: absolute;
+            color: #fff;
+            transition: .3s;
+
+            & span{
+                transition: .3s;
+                font-weight: bold;
+                color: #fff;
+                font-size: 20px;
+            }
+
+            &:hover{
+                cursor: pointer;
+            }
+
+            & .slider-grid__delete-item{
+                position: absolute;
+                top: 10px;
+                right: 10px;
+
+                & .material-icons{
+                    color: $red;
+
+                    &:hover{
+                        background-color: $red;
+                        border-radius: 100%;
+                        color: #fff;
+                        padding: 10px;
+                    }
+                }
+
+            }
+        }
+
+        & img{
+            border-radius: 5px;
+            width: 100%;
+            height: 115px;
+            object-fit: cover;
+        }
+
+        &:hover{
+            & .slider-grid__change-img{
+                opacity: 1;
+                visibility: visible;
+            }
+        }
+    }
+
+    & .slider-grid__add-slide{
+        @include centerBlock(100%, 100%, auto, auto);
+        color: $darkGrey;
+        border: 2px dashed $darkGrey;
+        border-radius: 10px;
+        transition: .3s;
+
+        &:hover{
+            color: #000;
+            border: 2px dashed #000;
+            transition: .3s;
+            cursor: pointer;
+        }
+    }
+
+    & .slider-grid__title{
+        margin-top: 10px;
+        text-align: center;
+    }
 }
