--- a/public/css/app.css
+++ b/public/css/app.css
@@ -199,6 +199,7 @@ span.material-icons {
 }
 
 .main-btn:hover {
+  cursor: pointer;
   background-color: #fff;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
   color: #1871C3;
@@ -420,19 +421,6 @@ section:first-child {
   font-size: 30px;
   font-weight: bold;
   margin-bottom: 20px;
-}
-
-.backcall .main-btn {
-  background-color: #1871C3;
-  color: #fff;
-  font-weight: bold;
-  font-family: "Roboto", sans-serif;
-}
-
-.backcall .main-btn:hover {
-  background-color: #fff;
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
-  color: #1871C3;
 }
 
 input,
