--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1261,11 +1261,14 @@ $slider-height: 550px;
 
 .contacts-wrapper {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 70% 30%;
     margin-top: 30px;
 
     & .contacts-wrapper_left {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
         justify-self: start;
+        grid-row: 1 / 2;
 
         & .contacts-wrapper_left__item {
             margin-bottom: 30px;
@@ -1301,8 +1304,12 @@ $slider-height: 550px;
         }
     }
 
-    & .contacts-wrapper_right {
-        justify-self: end;
+    & .contacts-wrapper__map{
+        grid-row: 2 / 3;
+    }
+
+    & .contacts-wrapper_right{
+        grid-row: 1 / 3;
     }
 }
 
